# ForgeV3

./: .env.example  .gitignore  .gitleaks.toml  AUDIT2_IMPLEMENTATION_PLAN.md  AUDIT_4_MASTER_TODOLIST.md  Audit 3 Results.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_2_REPORT.md  CONFIG_ANALYSIS_REPORT.md  FORGE_FEATURES_DOCUMENTATION.md  FORGE_FEATURE_CHECKLIST.md  FORGE_V3_INVESTOR_FAQ.md  FORGE_V3_INVESTOR_WHITEPAPER.md  FORGE_V3_PITCH_DECK.md  FORGE_V3_SECURITY_FIX_TODOLIST.md  FORGE_V3_TECHNICAL_WHITEPAPER.md  Fix_Todolist.md  Full Scan 1.md  Full_Scan_2.md  Full_Scan_2_Progress.md  IMPLEMENTATION_TODOLIST.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  VERIFICATION_REPORT.md  create_capsule_direct.py  create_origin_capsule.py  docker-compose.backup.yml  docker-compose.cloudflare.yml  docker-compose.prod.yml  docker-compose.yml  origin_capsule.json  requirements.txt  test_auth_flow.py  test_forge_v3_comprehensive.py  test_results.json  verify_features.py  verify_structure.py
forge-cascade-v2/: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  BUILD_PLAN.md  DEPLOYMENT.md  Dockerfile  README.md  manual_test.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-blockchain.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt  run_compliance.py  run_virtuals.py  start_all_servers.py  start_servers.bat  start_servers.sh  test_all_features.py  test_comprehensive.py  test_ghost_council.py  test_ghost_council_live.py  test_integration.py  test_quick.py  test_resilience.py  test_results.json  test_ui_integration.py
forge-cascade-v2/.github/workflows/: ci-cd.yml
forge-cascade-v2/docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf  prometheus.yml
forge-cascade-v2/docs/: API_FILE_SCAN_REPORT.md  SECURITY_PLANNING_SESSIONS.md
forge-cascade-v2/forge/: __init__.py  config.py  types.py
forge-cascade-v2/forge/api/: API_ANALYSIS_REPORT.md  app.py  dependencies.py  middleware.py
forge-cascade-v2/forge/compliance/: __init__.py  server.py  verify_imports.py
forge-cascade-v2/forge/copilot/: __init__.py  agent.py  tools.py
forge-cascade-v2/forge/database/: __init__.py  client.py  schema.py
forge-cascade-v2/forge/federation/: __init__.py  models.py  protocol.py  sync.py  trust.py
forge-cascade-v2/forge/immune/: __init__.py  anomaly.py  canary.py  circuit_breaker.py  health_checker.py
forge-cascade-v2/forge/kernel/: __init__.py  event_system.py  overlay_manager.py  pipeline.py  wasm_runtime.py
forge-cascade-v2/forge/models/: __init__.py  agent_gateway.py  base.py  capsule.py  chat.py  events.py  governance.py  graph_analysis.py  marketplace.py  notifications.py  overlay.py  query.py  semantic_edges.py  session.py  temporal.py  user.py
forge-cascade-v2/forge/monitoring/: __init__.py  logging.py  metrics.py
forge-cascade-v2/forge/overlays/: __init__.py  base.py  capsule_analyzer.py  governance.py  graph_algorithms.py  knowledge_query.py  lineage_tracker.py  ml_intelligence.py  performance_optimizer.py  primekg_overlay.py  security_validator.py  temporal_tracker.py
forge-cascade-v2/forge/repositories/: __init__.py  acp_repository.py  audit_repository.py  base.py  capsule_repository.py  cascade_repository.py  chat_repository.py  governance_repository.py  graph_repository.py  marketplace_repository.py  overlay_repository.py  session_repository.py  temporal_repository.py  user_repository.py
forge-cascade-v2/forge/resilience/: RESILIENCE_MODULE_ANALYSIS.md  __init__.py  config.py  integration.py
forge-cascade-v2/forge/security/: __init__.py  auth_service.py  authorization.py  capsule_integrity.py  dependencies.py  google_oauth.py  key_management.py  mfa.py  password.py  prompt_sanitization.py  safe_regex.py  secrets_manager.py  session_binding.py  tokens.py
forge-cascade-v2/forge/services/: __init__.py  agent_gateway.py  chat_service.py  embedding.py  ghost_council.py  ghost_council_game.py  init.py  llm.py  marketplace.py  notifications.py  pricing_engine.py  query_cache.py  query_compiler.py  scheduler.py  search.py  semantic_edge_detector.py  tipping_service.py  virtuals_integration.py  web3_service.py
forge-cascade-v2/forge/tests/: test_graph_extensions.py
forge-cascade-v2/forge/virtuals/: __init__.py  config.py
forge-cascade-v2/frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
forge-cascade-v2/frontend/src/: App.tsx  index.css  main.tsx
forge-cascade-v2/scripts/: __init__.py  health_check.py  seed_capsules_testnet.py  seed_data.py  seed_marketplace.py  setup_db.py  testnet_contract_abis.py  testnet_lifecycle.py  verify_system.py
forge-cascade-v2/stubs/: eth_account.pyi  hvac.pyi  openai.pyi  solana.pyi  web3.pyi  zxcvbn.pyi
forge-cascade-v2/tests/: conftest.py
forge-cascade-v2/tests/test_api/: __init__.py  test_acp_routes.py  test_agent_gateway_routes.py  test_app.py  test_auth_routes.py  test_capsules_routes.py  test_cascade_routes.py  test_chat_routes.py  test_copilot_routes.py  test_dependencies.py  test_diagnosis_routes.py  test_endpoints.py  test_federation_routes.py  test_game_routes.py  test_governance_routes.py  test_graph_routes.py  test_marketplace_routes.py  test_middleware.py  test_notifications_routes.py  test_overlays_routes.py  test_primekg_routes.py  test_security_headers.py  test_sessions_routes.py  test_system_routes.py  test_tipping_routes.py  test_users_routes.py  test_websocket_handlers.py
forge-cascade-v2/tests/test_blockchain/: __init__.py  test_testnet_integration.py
forge-cascade-v2/tests/test_copilot/: __init__.py  conftest.py  test_copilot_integration.py
forge-cascade-v2/tests/test_database/: test_client.py  test_schema.py
forge-cascade-v2/tests/test_diagnosis/: __init__.py  test_validation.py
forge-cascade-v2/tests/test_e2e/: __init__.py  conftest.py  seed_capsules.py  test_forge_full_lifecycle.py
forge-cascade-v2/tests/test_federation/: __init__.py  (+4 more)
(+580 files in other folders)
