[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-cascade"
version = "2.0.0"
description = "Institutional Memory Engine - Cognitive architecture for AI systems with persistent memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Idean", email = "forge@example.com"},
]
keywords = [
    "ai",
    "memory",
    "knowledge-management",
    "graph-database",
    "cognitive-architecture",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Web Framework
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn[standard]>=0.27.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "websockets>=12.0,<14.0",

    # Database
    "neo4j>=5.15.0,<6.0.0",

    # Caching
    "redis>=5.0.0,<6.0.0",

    # Validation & Serialization
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "email-validator>=2.1.0,<3.0.0",

    # Security
    "PyJWT[crypto]>=2.8.0,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",

    # ML/AI
    "scikit-learn>=1.3.0,<2.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<3.0.0",

    # Async utilities
    "httpx>=0.26.0,<1.0.0",
    "aiofiles>=23.2.0,<25.0.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.1.0,<26.0.0",
    "tenacity>=8.2.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<10.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "httpx>=0.26.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
    "black>=24.1.0,<26.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    # Security linting
    "bandit>=1.7.0,<2.0.0",
    "safety>=3.0.0,<4.0.0",
]
wasm = [
    "wasmtime>=15.0.0,<26.0.0",
]

[project.scripts]
forge = "forge.cli:main"

[project.urls]
Homepage = "https://github.com/idean/forge-cascade"
Documentation = "https://docs.forge-cascade.io"
Repository = "https://github.com/idean/forge-cascade"

[tool.hatch.build.targets.wheel]
packages = ["forge"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "E402",  # module level import not at top (intentional for module setup)
    "B904",  # raise without from (intentional for security - don't leak exception details)
    "E741",  # ambiguous variable name (l is common for listing/label in loops)
    "B023",  # loop variable binding (false positive in async executor context)
]

[tool.ruff.lint.isort]
known-first-party = ["forge"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
# SECURITY FIX (Audit 6 - Session 5): Incremental strict mode adoption
# Strict mode is the goal, but we enable it incrementally per-module
# to avoid blocking CI while maintaining forward progress
strict = false  # Base config is relaxed
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Enable per-module below

# Custom type stubs for external libraries (outside forge/ to avoid module conflicts)
mypy_path = "stubs"

# External libraries - using custom stubs in stubs/
[[tool.mypy.overrides]]
module = [
    "web3",
    "web3.*",
    "eth_account",
    "eth_account.*",
    "solana",
    "solana.*",
    "zxcvbn",
    "hvac",
    "hvac.*",
    "openai",
    "openai.*",
]
ignore_missing_imports = false  # Use our custom stubs

# External libraries without type stubs (no custom stubs yet)
[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "sentence_transformers.*",
    "sklearn.*",
    "passlib.*",
    "boto3.*",
    "botocore.*",
    "psutil.*",
    "httpx.*",
    "aiofiles.*",
    "tenacity.*",
    "structlog.*",
    "wasmtime.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

# Compliance module - relaxed typing (pre-existing module, will tighten incrementally)
[[tool.mypy.overrides]]
module = [
    "forge.compliance.*",
]
ignore_errors = true

# Core modules with STRICT type safety (Session 5 fixes)
[[tool.mypy.overrides]]
module = [
    "forge.types",
    "forge.api.schemas.validation",
    "forge.virtuals.game.protocols",
    "forge.repositories.base",
    "forge.services.marketplace",
    "forge.virtuals.game.forge_functions",
    "forge.immune.health_checker",
    "forge.api.dependencies",
]
strict = true
disallow_untyped_defs = true
warn_return_any = true

# Security-critical modules - strict typing required
[[tool.mypy.overrides]]
module = [
    "forge.security.*",
]
disallow_untyped_defs = true
warn_return_any = true

# API routes - require return type annotations
[[tool.mypy.overrides]]
module = [
    "forge.api.routes.*",
]
disallow_untyped_defs = false  # Relaxed until migrated
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["forge"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
